--- a/TechClinic/css/style.css
+++ b/TechClinic/css/style.css
@@ -48,31 +48,51 @@ body {
 
 /* Header Start */
 
+#header {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(217,217,217);
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    padding-top: 30px;
+}
+
 #navbar {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 1px 20px;
-    margin: 50px 500px;
-    background: 1px solid white;
+    justify-content: center;
     border-radius: 80px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.06);
+    padding-right: 30px;
+    background-color: white;
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+
+#navbar ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #navbar .logo {
-    height: 80%;
-    width: 80%;
+    height: 75%;
+    width: 75%;
     margin: 0
 }
 
 #navbar li {
     list-style: none;
-    padding: 0 5px;
+    padding: 0 10px;
 }
 
 #navbar li a {
     text-decoration: none;
-    font-style: "League Spartan";
     font-size: 16px;
     font-weight: 600;
     color: black;
@@ -84,21 +104,81 @@ body {
 }
 
 /* Home Page */
-
 #hero {
-    background-image: url("img/banner1.png");
+    background-image: url("banner1.png");
     height: 90vh;
     width: 100%;
     background-size: cover;
-    background-position: top 25% right 0;
-    padding: 0 80px;
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
-#hero div {
-    margin: 10px 80px;
-    padding: 0 100px;
+#hero div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* width: 50%; */
+}
+
+#hero div .big {
+    font-size: 80px;
+    font-weight: 500;
+    margin: 3px 0;
+}
+
+#hero div #tech {
+    color: rgb(24, 182, 244);
+}
+
+#hero div p {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 25px;
+}
+
+#hero div button {
+    font-size: 20px;
+    color: white;
+    width: 30%;
+    /* background: 1px solid black; */
+    background-color: black;
+    border-radius: 80px;
+    padding: 10px 0;
+}
+
+
+#feature {
+    color: white;
+    background-color: black;
+}
+
+#feature .fe-box {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+}
+
+#feature ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#feature li {
+    list-style: none;
+    padding: 10px 5px;
+}
+
+#services {
+    background-color: black;
+    padding: 0 50px;
+}
+
+.se-box {
+    background-color: white;
+    padding: 80px 80px;
 }
